--- a/Rapport 4/nichoka_report4.tex
+++ b/Rapport 4/nichoka_report4.tex
@@ -91,7 +91,8 @@
     \end{figure}
   
 
-    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit \cite{website:ueye}, which we used to change the settings of the camera and make recordings. 
+    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit \cite{website:ueye}, which we used to change the settings of the camera and make recordings.
+    In order to ensure that the footage was suitable to be analyzed using the image processing techniques described earlier several of the parameters in uEye cockpit had to be manually adjusted. 
 
     First, the error of the stated FPS of the camera had to be determined. This was done by connecting a series of circular LEDs (see Fig. \ref{fig:FpsSignal}) to a signal generator. The light emitted would "circle" at a rate which could be changed using the signal generator. By adjusting the signal such that the emitted light would seem stationary when observed through the video feed in uEye cockpit, the FPS of the camera determined to be 
     
