--- a/Rapport 4/nichoka_report4.tex
+++ b/Rapport 4/nichoka_report4.tex
@@ -74,14 +74,16 @@
 
 %\tableofcontents
 
-\begin{multicols*}{2}
 \section{\label{sect:intro}Introduction}
   This report contains the description and analysis of data collected in the lab 21.03.2018 concerning the flow of several spherical objects in a large range of different sizes and densities. The balls were immersed in fluid, dropped and filmed. Post-lab, the raw footage was then processed using a Python script in order to quantify the motion of the spheres. This 
 
 \section{\label{sect:theory}Theory}
 
+  \subsection{Image processing\label{sect:imgpro}}
+
 \section{\label{section:experimental}Experimental Procedure} 
-  \subsection{Video capture}
+  
+  \subsection{Video capture\label{subsect:vidcap}}
     
     \begin{figure}[H]
       \center
@@ -90,82 +92,94 @@
       \label{fig:FpsSignal}
     \end{figure}
   
+    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit\cite{_ueye_????}, a program which allowed us to change the settings of the camera, as well as record video files. The image was set to grayscale and the contrast, exposure, gain etc was changed such that the color histogram in uEye would show two significant, separated peaks such that it would be easy to process the image using the method described in the theory section \ref{sect:imgpro}.
 
-    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit \cite{website:ueye}, which we used to change the settings of the camera and make recordings.
-    In order to ensure that the footage was suitable to be analyzed using the image processing techniques described earlier several of the parameters in uEye cockpit had to be manually adjusted. 
+    Next, the error of the set FPS of the camera had to be determined. This was done by connecting a series of LEDs in a circle (see Fig. \ref{fig:FpsSignal}) to a signal generator. The light emitted would "circle" at a rate which could be changed using the signal generator. By adjusting the rate such that the emitted light would seem stationary when observed through the video feed in uEye, the true FPS of the camera could be determined. In our test, we set the camera to film at 60 FPS and the rate was adjusted untill the period of the LED was synced up with the camera at $3.60047$ KHz, the equivalent of $60.00783$ periods per second.
 
-    First, the error of the stated FPS of the camera had to be determined. This was done by connecting a series of circular LEDs (see Fig. \ref{fig:FpsSignal}) to a signal generator. The light emitted would "circle" at a rate which could be changed using the signal generator. By adjusting the signal such that the emitted light would seem stationary when observed through the video feed in uEye cockpit, the FPS of the camera determined to be 
-    
+    In order to get the conversion factor between pixels and meters, a still picture was taken of the tubes with a known length in frame, at a distance roughly equal to where the balls would travel. This had to be done for each experimental setup. For our known lengths, we used a meter rule and a $30$ cm ruler for the large and small scale experiments respectively. See Fig. \ref{fig:scale1}.
 
-  \begin{figure}[h]
-    \center
-    \subfloat[][Large tube]{\includegraphics[width=8cm, angle=90]{scripts/figs/bilde_scale1.png}\label{<figure1>}}
-    \subfloat[][Small tube]{\includegraphics[width=8cm, angle=90]{scripts/figs/bilde_scale2.png}\label{<figure1>}}
+    \begin{figure}[h]
+      \center
+      \subfloat[][Large tube]{\includegraphics[width=8cm, angle=90]{scripts/figs/bilde_scale1.png}\label{<figure1>}}
+      \subfloat[][Small tube]{\includegraphics[width=8cm, angle=90]{scripts/figs/bilde_scale2.png}\label{<figure1>}}
+      \caption{Cropped images used to find pixel to meter ratio for both of the tubes. (Scaled down in this document)}
+      \label{fig:scale1}
+    \end{figure}
+  
+  \subsection{Equipment}
 
-    \caption{Cropped images used to find pixel to meter ratio for both of the tubes. (Scaled down in this document)}
-    \label{fig:scale1}
-  \end{figure}
+    We had two similar experimental setups. One large scale, and one small scale. the large scale consisted of a roughly 2.5-3m tall\footnote{We did not measure the height of the tube, but it was fairly close to the ceiling.} transparrent tube, and the small scale a 30-40cm transparent measuring tube. Both of the tubes were filled with oil (Shell Tellus S2 M 68 Industrial Hydraulic Fluid\cite{_shell_????}).
 
-  \begin{figure}[H]
-    \includegraphics[width=7cm]{scripts/figs/IMG_20180321_131204.jpg}
-    \caption{Most of the balls used in the experiment, excluding the ones labeled small 1 and 2.}
-  \end{figure}
+    The set of balls which were to be dropped in the large scale setup are depicted in Fig. \ref{fig:balls}. Additionally, there were two smaller balls which were dropped in the small scale setup. The mass of the balls was measured using a digital scale with a precision of $0.01$g \cite{_proscale_????}, except for the two smallest balls, for which the mass was given by the lab instructor. The diameter of the balls was measured using a Vernier Caliper with a precision of $0.01$mm, again, except for the two smallest balls, which diameter was provided by the lab instructor.
+
+  \subsection{Procedure}
+    The experiment was performed by 3 people performing 3 different, simultaneous tasks. It can technically be performed by one person, but due to the nature of the experiment, it is not recommended, as it is not practical to make repeated readings if something goes wrong.
+
+    The camera was pointed towards the large-scale tube, and prepared as described in section \ref{subsect:vidcap} between each reading. It was important that the lighting in the room was fairly constant for the video capture, so curtains were put in front of the windows. The camera was kept at 100 FPS for every experiment. For some of the balls with relatively low terminal velocity, the FPS could have been lowered to save space without making any significant sacrifices to the accuracy, but as we did not have any predicted values for the terminal velocity of the individual balls, we opted to keep it at 100FPS for every single experiment.
+
+    Before each experiment, the temperature of the oil was measured using an IR-thermometer with a precision of $\pm2^\circ$C \cite{_fluke_????}. Which is used to determine the viscosity of the oil.
+
+    For each experiment, a ball was picked up by hand and brought to the top of the tube by ladder. The ball was gripped tightly before carefully submerging it in the oil. After having ensured the person operating the camera is ready, the ball was dropped. It is critical that the ball is dropped in a certain way, otherwise it may gain too much horizontal velocity, which at worst can cause it to hit the side of the tube halfway through\footnote{Which happened in our first attempt}. In order to minimize this, it is important to separate the fingers gripping the ball at the same time when dripping it, instead of letting it slide out of the hand. Sliding it out, leads it to spin, which in turn may lead it to move horizontally.
+
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=7cm]{scripts/figs/IMG_20180321_131204.jpg}
+      \caption{Most of the balls used in the experiment, excluding the ones labeled small 1 and 2.}
+      \label{fig:balls}
+    \end{figure}
+
 
 
 \section{\label{sect:results}Results}
-\end{multicols*}
 
   \begin{table}[H]
     \center
     \begin{tabular}{ r | l  l  r  r  r }
       
-      Type       & Mass [g] & Diameter [mm]   & FPS    & T [$^\circ$C]   & Filename \\ 
+      Type       & Mass [g] & Diameter [mm]   & FPS    & T [$^\circ$C]   & Label \\ 
       \hline
-      Metal       & 502.76  & 48.98          & 100    & 22.7   & A1.avi  \\ 
-      Metal       & 28.13   & 19.02          & 100    & 22.8   & A2.avi  \\  
-      Metal       & 6.99    & 11.97          & 100    & 22.6   & A3.avi  \\ 
-      Metal       & 2.08    & 7.99           & 100    & 22.6   & A4.avi  \\ 
-      Metal       & 0.68    & 5.48           & 100    & 22.5   & A5.avi  \\ 
-      Metal       & 0.10    & 2.98           & 100    & 22.6   & A6.avi  \\ 
+      Metal       & 502.76  & 48.98          & 100    & 22.7   & A1  \\ 
+      Metal       & 28.13   & 19.02          & 100    & 22.8   & A2  \\  
+      Metal       & 6.99    & 11.97          & 100    & 22.6   & A3  \\ 
+      Metal       & 2.08    & 7.99           & 100    & 22.6   & A4  \\ 
+      Metal       & 0.68    & 5.48           & 100    & 22.5   & A5  \\ 
+      Metal       & 0.10    & 2.98           & 100    & 22.6   & A6  \\ 
       \\
-      Plastic     & 488.41  & 99.4           & 100    & 22.5   & B1.avi  \\ 
-      Plastic     & 61.56   & 50.02          & 100    & 22.5   & B2.avi  \\ 
-      Plastic     & 7.12    & 23.89          & 100    & 22.6   & B3.avi  \\ 
-      Plastic     & 0.87    & 12.06          & 100    & 22.6   & B4.avi  \\ 
+      Plastic     & 488.41  & 99.4           & 100    & 22.5   & B1  \\ 
+      Plastic     & 61.56   & 50.02          & 100    & 22.5   & B2  \\ 
+      Plastic     & 7.12    & 23.89          & 100    & 22.6   & B3  \\ 
+      Plastic     & 0.87    & 12.06          & 100    & 22.6   & B4  \\ 
       \\
-      White       & 29.74   & 25.24          & 100    & 22.6   & C1.avi  \\ 
-      BigB lack   & 31.42   & 21.08          & 100    & 22.5   & C4.avi  \\ 
-      Small Black & 5.67    & 16.45          & 100    & 22.5   & C5.avi  \\ 
-      Big Green   & 31.60   & 21.86          & 100    & 22.4   & C3.avi  \\ 
-      Small Green & 5.60    & 16.38          & 100    & 22.3   & C6.avi  \\ 
-      Big Red     & 18.44   & 24.01          & 100    & 22.3   & C2.avi  \\ 
-      Glass       & 0.27    & 5.81           & 100    & 22.3   & C7.avi  \\ 
+      White       & 29.74   & 25.24          & 100    & 22.6   & C1  \\ 
+      BigB lack   & 31.42   & 21.08          & 100    & 22.5   & C4  \\ 
+      Small Black & 5.67    & 16.45          & 100    & 22.5   & C5  \\ 
+      Big Green   & 31.60   & 21.86          & 100    & 22.4   & C3  \\ 
+      Small Green & 5.60    & 16.38          & 100    & 22.3   & C6  \\ 
+      Big Red     & 18.44   & 24.01          & 100    & 22.3   & C2  \\ 
+      Glass       & 0.27    & 5.81           & 100    & 22.3   & C7  \\ 
       \\
-      Small 2     & 12.0E-3 & 1.59           & 100    & 23.7   & D2.avi  \\    
-      Small 1     & 4.1E-3  & 1.0            & 100    & 23.7   & D1.avi  \\ 
+      Small 1     & 4.1E-3  & 1.0            & 100    & 23.7   & D1  \\ 
+      Small 2     & 12.0E-3 & 1.59           & 100    & 23.7   & D2  \\    
     \end{tabular}
     \caption{Spheres}
   \end{table}
 
-\begin{multicols*}{2}
 
 \section{\label{sect:discuss}Discussion}
 \section{\label{sect:conclusion}Conclusion}
 
 \bibliographystyle{plain}
-\bibliography{references} 
+\bibliography{references.bib} 
 
-\end{multicols*}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%% END OF MAIN BODY %%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
-\appendix*
-\section{Code}
-Following
-
-\lstinputlisting[language=python]{scripts/lesVideo_conv.py}
-\lstinputlisting{scripts/data/labdata.dat}
+%\appendix*
+%\section{Scripts}
+%\lstinputlisting[language=python]{scripts/lesVideo_conv.py}
+%\lstinputlisting{scripts/data/labdata.dat}
 
 \end{document}
