--- a/Rapport 4/references.bib
+++ b/Rapport 4/references.bib
@@ -1,5 +1,39 @@
-@misc{website:ueye,
-      author = "DS Imaging Development Systems GmbH",
-      title = "uEye Cockpit",
-      url = "https://en.ids-imaging.com/ueye-cockpit.html"
+
+@online{_ueye_????,
+	title = {{uEye} Cockpit - {IDS} Imaging Development Systems {GmbH}},
+	url = {https://en.ids-imaging.com/ueye-cockpit.html},
+	urldate = {2018-04-26},
+	file = {uEye Cockpit - IDS Imaging Development Systems GmbH:/home/nick/Zotero/storage/42QTT5PR/ueye-cockpit.html:text/html}
+}
+
+@book{squires_practical_2001,
+	edition = {4},
+	title = {Practical Physics},
+	isbn = {978-0-521-77940-1},
+	pagetotal = {212},
+	publisher = {Cambridge University Press},
+	author = {Squires, G. L},
+	date = {2001}
+}
+
+@misc{_shell_????,
+	title = {Shell Tellus S2 M 68 Technical Data Sheet},
+	url = {http://www.ktstrade.com.my/products/shell/technicaldata/0043.pdf},
+	shorttitle = {Shell Tellus S2 M 68},
+	abstract = {Shell Tellus S2 M fluids are high performance hydraulic fluids that use Shell’s unique patented technology to provide
+outstanding protection and performance in most manufacturing and many mobile equipment operations. They resist
+breakdown under heat or mechanical stress and help prevent damaging deposit formation that can decrease the
+efficiency of your hydraulic power system.},
+	publisher = {Shell},
+	urldate = {2018-04-26}
+}
+
+@misc{_proscale_????,
+	title = {{ProScale} {XC} User Manual},
+	url = {http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/proscalexc.pdf}
+}
+
+@misc{_fluke_????,
+	title = {Fluke 62 User Manual},
+	url = {http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/fluke62_irthermometer.pdf}
 }
