--- a/Rapport 4/nichoka_report4.tex
+++ b/Rapport 4/nichoka_report4.tex
@@ -137,34 +137,11 @@
 
   \begin{table}[H]
     \center
+    \caption{Results}
     \begin{tabular}{ r | l  l l  r  r  r }
-      
-      Type       & Mass [g] & Diameter [mm] & $v_c$ [$\textup{ms}^-1$] & FPS    & T [$^\circ$C]   & Label \\ 
-      \hline
-      Metal       & 502.76  & 48.98         & N/A & 100    & 22.7   & A1  \\ 
-      Metal       & 28.13   & 19.02         & & 100    & 22.8   & A2  \\  
-      Metal       & 6.99    & 11.97         & & 100    & 22.6   & A3  \\ 
-      Metal       & 2.08    & 7.99          & & 100    & 22.6   & A4  \\ 
-      Metal       & 0.68    & 5.48          & & 100    & 22.5   & A5  \\ 
-      Metal       & 0.10    & 2.98          & & 100    & 22.6   & A6  \\ 
-      \\
-      Plastic     & 488.41  & 99.4          & & 100    & 22.5   & B1  \\ 
-      Plastic     & 61.56   & 50.02         & & 100    & 22.5   & B2  \\ 
-      Plastic     & 7.12    & 23.89         & & 100    & 22.6   & B3  \\ 
-      Plastic     & 0.87    & 12.06         & & 100    & 22.6   & B4  \\ 
-      \\
-      White       & 29.74   & 25.24         & & 100    & 22.6   & C1  \\ 
-      Big Black   & 31.42   & 21.08         & & 100    & 22.5   & C4  \\ 
-      Small Black & 5.67    & 16.45         & & 100    & 22.5   & C5  \\ 
-      Big Green   & 31.60   & 21.86         & & 100    & 22.4   & C3  \\ 
-      Small Green & 5.60    & 16.38         & & 100    & 22.3   & C6  \\ 
-      Big Red     & 18.44   & 24.01         & & 100    & 22.3   & C2  \\ 
-      Glass       & 0.27    & 5.81          & & 100    & 22.3   & C7  \\ 
-      \\
-      Small 1     & 4.1E-3  & 1.0           & & 100    & 23.7   & D1  \\ 
-      Small 2     & 12.0E-3 & 1.59          & & 100    & 23.7   & D2  \\    
+      \input{scripts/data/labdata.dat} 
     \end{tabular}
-    \caption{Spheres}
+    \label{tab:results}
   \end{table}
 
 
