--- a/Rapport 4/references.bib
+++ b/Rapport 4/references.bib
@@ -38,17 +38,20 @@ efficiency of your hydraulic power system.},
 	url = {http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/fluke62_irthermometer.pdf}
 }
 
-@inreference{wikipedia_contributors_grayscale_2018,
-	title = {Grayscale --- Wikipedia, The Free Encyclopedia},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
-	url = {https://en.wikipedia.org/w/index.php?title=SRGB&oldid=825417562},
-	abstract = {{sRGB} (standard Red Green Blue) is an {RGB} color space that {HP} and Microsoft created cooperatively in 1996 to use on monitors, printers, and the Internet. It was subsequently standardized by the {IEC} as {IEC} 61966-2-1:1999. It is often the "default" color space for images that contain no color space information, especially if the images' pixels are stored in 8-bit integers per color channel.
-{sRGB} uses the {ITU}-R {BT}.709 primaries, the same as in studio monitors and {HDTV}, a transfer function (gamma curve) typical of {CRTs}, and a viewing environment designed to match typical home and office viewing conditions. This specification allowed {sRGB} to be directly displayed on typical {CRT} monitors of the time, which greatly aided its acceptance.},
-	booktitle = {Wikipedia},
-	author = {Wikipedia contributors},
-	urldate = {2018-04-29},
-	date = {2018-02-13},
-	langid = {english},
-	note = {Page Version {ID}: 825417562},
-	file = {Snapshot:/home/nick/Zotero/storage/4Z8GK5CP/index.html:text/html}
-}
+@misc{ wiki:grayscale,
+    author = "{Wikipedia contributors}",
+    title = "Grayscale --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Grayscale&oldid=827764362",
+    note = "[Online; accessed 30-April-2018]"
+  }
+
+
+
+@misc{ wiki:grav,
+    author = "{Wikipedia contributors}",
+    title = "Standard gravity --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Standard_gravity&oldid=832362254",
+    note = "[Online; accessed 30-April-2018]"
+  }
